apps/services/whoami/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: services
  labels:
    app: whoami
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        image: traefik/whoami:v1.6.1
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
        resources: {}
      nodeSelector:
        beta.kubernetes.io/arch: amd64
      tolerations: []
      affinity: {}
